--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -112,9 +112,7 @@
 <h4><span id="Ostatn.C3.AD"></span><span class="mw-headline" id="Ostatn&iacute;">Ostatn&iacute;</span></h4>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_StopOperation.svg&amp;filetimestamp=20201015163520&amp;.html" class="mw-file-description"><img src="../File/Sketcher_StopOperation.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_StopOperation.html" title="Sketcher StopOperation">Zastavit operaci</a>: Zastav&iacute; v&scaron;echny aktu&aacute;ln&#283; spu&scaron;t&#283;n&eacute; n&aacute;stroje pro tvorbu geometrie nebo omezen&iacute;.</li></ul>
 <ul><li><a href="../Sketcher_Grid.html" title="Sketcher Grid">M&#345;&iacute;&#382;ka</a>: Nastaven&iacute; m&#345;&iacute;&#382;ky lze zm&#283;nit v menu <a href="../Sketcher_Dialog.html#Sketch_Edit" title="Sketcher Dialog">sekce Sketch Edit dialogov&eacute;ho okna Sketcher</a>.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><a href="../Sketcher_Snap.html" title="Sketcher Snap">Snap</a>: Snap settings can be changed in the same menu.</li></ul>
-</div>
+<ul><li><a href="../Sketcher_Snap.html" title="Sketcher Snap">Zachycen&iacute;</a>: Nastaven&iacute; zachycen&iacute; lze zm&#283;nit ve stejn&eacute;m menu.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><a href="../Sketcher_RenderingOrder.html" title="Sketcher RenderingOrder">Rendering Order</a>: The rendering order can be changed in the same menu.</li></ul>
 </div>
@@ -780,13 +778,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118112157
+Cached time: 20260118112239
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.433 seconds
-Real time usage: 0.610 seconds
-Preprocessor visited node count: 1551/1000000
+CPU time usage: 0.369 seconds
+Real time usage: 0.520 seconds
+Preprocessor visited node count: 1550/1000000
 Post&#8208;expand include size: 35120/2097152 bytes
 Template argument size: 9812/2097152 bytes
 Highest expansion depth: 7/100
@@ -796,19 +794,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.958      1 -total
- 26.63%    9.575      1 Template:Sketcher_Tools_navi/cs
- 14.22%    5.114      2 Template:Navigation_menu_2
- 13.49%    4.851      1 Template:Userdocnavi/cs
- 11.32%    4.070      1 Template:PropertyView
-  8.83%    3.175     36 Template:Version
-  5.70%    2.048      1 Template:Variable
-  5.66%    2.035     14 Template:KEY
-  5.51%    1.981      8 Template:VersionPlus
-  5.36%    1.928      2 Template:Docnav
+100.00%   25.887      1 -total
+ 23.61%    6.111      1 Template:Sketcher_Tools_navi/cs
+ 17.12%    4.431      2 Template:Navigation_menu_2
+ 13.59%    3.519      1 Template:Userdocnavi/cs
+ 10.35%    2.678      1 Template:PropertyView
+  8.24%    2.133     36 Template:Version
+  7.24%    1.874      2 Template:Docnav
+  5.50%    1.423      6 Template:Caption
+  5.49%    1.422      1 Template:Variable
+  4.66%    1.205     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118112156 and revision id 1740263. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118112239 and revision id 1740265. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
