--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -113,9 +113,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_StopOperation.svg&amp;filetimestamp=20201015163520&amp;.html" class="mw-file-description"><img src="../File/Sketcher_StopOperation.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_StopOperation.html" title="Sketcher StopOperation">Zastavit operaci</a>: Zastav&iacute; v&scaron;echny aktu&aacute;ln&#283; spu&scaron;t&#283;n&eacute; n&aacute;stroje pro tvorbu geometrie nebo omezen&iacute;.</li></ul>
 <ul><li><a href="../Sketcher_Grid.html" title="Sketcher Grid">M&#345;&iacute;&#382;ka</a>: Nastaven&iacute; m&#345;&iacute;&#382;ky lze zm&#283;nit v menu <a href="../Sketcher_Dialog.html#Sketch_Edit" title="Sketcher Dialog">sekce Sketch Edit dialogov&eacute;ho okna Sketcher</a>.</li></ul>
 <ul><li><a href="../Sketcher_Snap.html" title="Sketcher Snap">Zachycen&iacute;</a>: Nastaven&iacute; zachycen&iacute; lze zm&#283;nit ve stejn&eacute;m menu.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><a href="../Sketcher_RenderingOrder.html" title="Sketcher RenderingOrder">Rendering Order</a>: The rendering order can be changed in the same menu.</li></ul>
-</div>
+<ul><li><a href="../Sketcher_RenderingOrder.html" title="Sketcher RenderingOrder">Po&#345;ad&iacute; vykreslov&aacute;n&iacute;</a>: Po&#345;ad&iacute; vykreslov&aacute;n&iacute; lze zm&#283;nit ve stejn&eacute;m menu.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Geometries">Geometries</span></h3>
 </div>
@@ -778,13 +776,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118112239
+Cached time: 20260118112309
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.369 seconds
-Real time usage: 0.520 seconds
-Preprocessor visited node count: 1550/1000000
+CPU time usage: 0.387 seconds
+Real time usage: 0.536 seconds
+Preprocessor visited node count: 1549/1000000
 Post&#8208;expand include size: 35120/2097152 bytes
 Template argument size: 9812/2097152 bytes
 Highest expansion depth: 7/100
@@ -794,19 +792,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.887      1 -total
- 23.61%    6.111      1 Template:Sketcher_Tools_navi/cs
- 17.12%    4.431      2 Template:Navigation_menu_2
- 13.59%    3.519      1 Template:Userdocnavi/cs
- 10.35%    2.678      1 Template:PropertyView
-  8.24%    2.133     36 Template:Version
-  7.24%    1.874      2 Template:Docnav
-  5.50%    1.423      6 Template:Caption
-  5.49%    1.422      1 Template:Variable
-  4.66%    1.205     14 Template:KEY
+100.00%   26.105      1 -total
+ 26.64%    6.955      1 Template:Sketcher_Tools_navi/cs
+ 16.21%    4.232      2 Template:Navigation_menu_2
+ 11.84%    3.091      1 Template:Userdocnavi/cs
+  9.76%    2.548      1 Template:PropertyView
+  7.78%    2.032     36 Template:Version
+  7.13%    1.861      2 Template:Docnav
+  5.52%    1.441      6 Template:Caption
+  5.42%    1.415      1 Template:Variable
+  5.04%    1.316     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118112239 and revision id 1740265. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118112309 and revision id 1740267. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
