--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -114,9 +114,9 @@
 <ul><li><a href="../Sketcher_Grid.html" title="Sketcher Grid">M&#345;&iacute;&#382;ka</a>: Nastaven&iacute; m&#345;&iacute;&#382;ky lze zm&#283;nit v menu <a href="../Sketcher_Dialog.html#Sketch_Edit" title="Sketcher Dialog">sekce Sketch Edit dialogov&eacute;ho okna Sketcher</a>.</li></ul>
 <ul><li><a href="../Sketcher_Snap.html" title="Sketcher Snap">Zachycen&iacute;</a>: Nastaven&iacute; zachycen&iacute; lze zm&#283;nit ve stejn&eacute;m menu.</li></ul>
 <ul><li><a href="../Sketcher_RenderingOrder.html" title="Sketcher RenderingOrder">Po&#345;ad&iacute; vykreslov&aacute;n&iacute;</a>: Po&#345;ad&iacute; vykreslov&aacute;n&iacute; lze zm&#283;nit ve stejn&eacute;m menu.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Geometries">Geometries</span></h3>
-</div>
+<p><span id="Geometries"></span>
+</p>
+<h3><span class="mw-headline" id="Geometrie">Geometrie</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>These are tools for creating objects.
 </p>
@@ -776,12 +776,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118112309
+Cached time: 20260118112323
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.387 seconds
-Real time usage: 0.536 seconds
+CPU time usage: 0.356 seconds
+Real time usage: 0.527 seconds
 Preprocessor visited node count: 1549/1000000
 Post&#8208;expand include size: 35120/2097152 bytes
 Template argument size: 9812/2097152 bytes
@@ -792,19 +792,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.105      1 -total
- 26.64%    6.955      1 Template:Sketcher_Tools_navi/cs
- 16.21%    4.232      2 Template:Navigation_menu_2
- 11.84%    3.091      1 Template:Userdocnavi/cs
-  9.76%    2.548      1 Template:PropertyView
-  7.78%    2.032     36 Template:Version
-  7.13%    1.861      2 Template:Docnav
-  5.52%    1.441      6 Template:Caption
-  5.42%    1.415      1 Template:Variable
-  5.04%    1.316     14 Template:KEY
+100.00%   29.447      1 -total
+ 22.63%    6.664      1 Template:Sketcher_Tools_navi/cs
+ 18.81%    5.540      1 Template:Userdocnavi/cs
+ 14.57%    4.290      2 Template:Navigation_menu_2
+ 13.10%    3.857      1 Template:PropertyView
+  8.53%    2.512      1 Template:Variable
+  6.38%    1.880     36 Template:Version
+  5.67%    1.669      2 Template:Docnav
+  4.91%    1.446     14 Template:KEY
+  4.83%    1.423      6 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118112309 and revision id 1740267. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118112322 and revision id 1740269. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
