--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -119,9 +119,7 @@
 <h3><span class="mw-headline" id="Geometrie">Geometrie</span></h3>
 <p>Jedn&aacute; se o n&aacute;stroje pro vytv&aacute;&#345;en&iacute; objekt&#367;.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePoint.svg&amp;filetimestamp=20240101090735&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePoint.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePoint.html" title="Sketcher CreatePoint">Point</a>: Creates a point.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePoint.svg&amp;filetimestamp=20240101090735&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePoint.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePoint.html" title="Sketcher CreatePoint">Bod</a>: Vytvo&#345;&iacute; bod.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePolyline.svg&amp;filetimestamp=20240101090758&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePolyline.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline">Polyline</a>: Creates a series of line and arc segments connected by their endpoints. The tool has several modes.</li></ul>
 </div>
@@ -774,13 +772,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118112357
+Cached time: 20260118112434
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.456 seconds
-Real time usage: 0.590 seconds
-Preprocessor visited node count: 1548/1000000
+CPU time usage: 0.429 seconds
+Real time usage: 0.637 seconds
+Preprocessor visited node count: 1547/1000000
 Post&#8208;expand include size: 35120/2097152 bytes
 Template argument size: 9812/2097152 bytes
 Highest expansion depth: 7/100
@@ -790,19 +788,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.438      1 -total
- 28.12%    9.403      1 Template:Sketcher_Tools_navi/cs
- 14.40%    4.815      2 Template:Navigation_menu_2
- 12.44%    4.159      1 Template:Userdocnavi/cs
- 10.48%    3.504      1 Template:PropertyView
-  7.92%    2.650      2 Template:Docnav
-  6.47%    2.162     36 Template:Version
-  5.94%    1.987     14 Template:KEY
-  5.26%    1.759      1 Template:Variable
-  4.99%    1.669      6 Template:Caption
+100.00%   40.129      1 -total
+ 21.83%    8.759      1 Template:Sketcher_Tools_navi/cs
+ 14.15%    5.679      1 Template:Userdocnavi/cs
+ 13.67%    5.484      2 Template:Navigation_menu_2
+ 12.66%    5.079      1 Template:PropertyView
+ 10.13%    4.064      2 Template:Docnav
+  7.04%    2.827     36 Template:Version
+  6.35%    2.550      1 Template:TOCright
+  5.86%    2.352      5 Template:MenuCommand
+  5.42%    2.174      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118112356 and revision id 1740271. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118112433 and revision id 1740273. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
