--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -121,9 +121,7 @@
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePoint.svg&amp;filetimestamp=20240101090735&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePoint.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePoint.html" title="Sketcher CreatePoint">Bod</a>: Vytvo&#345;&iacute; bod.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePolyline.svg&amp;filetimestamp=20240101090758&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePolyline.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline">Polyline</a>: Vytvo&#345;&iacute; s&eacute;rii &uacute;se&#269;ek a oblouk&#367; spojen&yacute;ch jejich koncov&yacute;mi body. N&aacute;stroj m&aacute; n&#283;kolik re&#382;im&#367;.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateLine.svg&amp;filetimestamp=20240101090429&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateLine.html" title="Sketcher CreateLine">Line</a>: Creates a line. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: The tool has three modes.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateLine.svg&amp;filetimestamp=20240101090429&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateLine.html" title="Sketcher CreateLine">P&#345;&iacute;mka</a>: Vytvo&#345;&iacute; p&#345;&iacute;mku. <a href="../index.php?title=Template;Verze&amp;action=edit&amp;redlink=1.html" class="new" title="Template:Verze (page does not exist)">Template:Verze</a>: N&aacute;stroj m&aacute; t&#345;i re&#382;imy.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span id="Sketcher_CompCreateArc"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateArc.svg&amp;filetimestamp=20240101085740&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateArc.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Create Arc:</span></li></ul>
 </div>
@@ -770,15 +768,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118112542
+Cached time: 20260118112625
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.382 seconds
-Real time usage: 0.499 seconds
-Preprocessor visited node count: 1546/1000000
-Post&#8208;expand include size: 35120/2097152 bytes
-Template argument size: 9812/2097152 bytes
+CPU time usage: 0.418 seconds
+Real time usage: 0.678 seconds
+Preprocessor visited node count: 1540/1000000
+Post&#8208;expand include size: 35062/2097152 bytes
+Template argument size: 9806/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -786,19 +784,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.331      1 -total
- 25.18%    7.890      1 Template:Sketcher_Tools_navi/cs
- 16.25%    5.090      2 Template:Navigation_menu_2
- 14.89%    4.665      1 Template:Userdocnavi/cs
- 13.26%    4.153      1 Template:PropertyView
-  8.10%    2.537     36 Template:Version
-  6.60%    2.067      2 Template:Docnav
-  5.30%    1.662      1 Template:Variable
-  4.65%    1.456      6 Template:Caption
-  3.97%    1.242      8 Template:VersionPlus
+100.00%   37.671      1 -total
+ 25.47%    9.594      1 Template:Sketcher_Tools_navi/cs
+ 12.84%    4.837      2 Template:Navigation_menu_2
+ 11.49%    4.328      1 Template:Userdocnavi/cs
+  9.32%    3.512     35 Template:Version
+  9.31%    3.509      1 Template:PropertyView
+  8.60%    3.241      2 Template:Docnav
+  5.99%    2.258      6 Template:Caption
+  5.37%    2.022      8 Template:VersionPlus
+  4.44%    1.674      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118112541 and revision id 1740275. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118112625 and revision id 1740277. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
