--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -122,9 +122,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePoint.svg&amp;filetimestamp=20240101090735&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePoint.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePoint.html" title="Sketcher CreatePoint">Bod</a>: Vytvo&#345;&iacute; bod.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePolyline.svg&amp;filetimestamp=20240101090758&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePolyline.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline">Polyline</a>: Vytvo&#345;&iacute; s&eacute;rii &uacute;se&#269;ek a oblouk&#367; spojen&yacute;ch jejich koncov&yacute;mi body. N&aacute;stroj m&aacute; n&#283;kolik re&#382;im&#367;.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateLine.svg&amp;filetimestamp=20240101090429&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateLine.html" title="Sketcher CreateLine">P&#345;&iacute;mka</a>: Vytvo&#345;&iacute; p&#345;&iacute;mku. <a href="../index.php?title=Template;Verze&amp;action=edit&amp;redlink=1.html" class="new" title="Template:Verze (page does not exist)">Template:Verze</a>: N&aacute;stroj m&aacute; t&#345;i re&#382;imy.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span id="Sketcher_CompCreateArc"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateArc.svg&amp;filetimestamp=20240101085740&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateArc.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Create Arc:</span></li></ul>
-</div>
+<ul><li><span id="Sketcher_CompCreateArc"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateArc.svg&amp;filetimestamp=20240101085740&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateArc.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Vytvo&#345;it oblouk:</span></li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateArc.svg&amp;filetimestamp=20240101085740&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateArc.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateArc.html" title="Sketcher CreateArc">Arc From Center</a>: Creates an arc from its center and its endpoints. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Or from its endpoints and a point along the arc.</li></ul></dd></dl>
 </div> 
@@ -768,13 +766,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118112625
+Cached time: 20260118112714
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.418 seconds
-Real time usage: 0.678 seconds
-Preprocessor visited node count: 1540/1000000
+CPU time usage: 0.448 seconds
+Real time usage: 0.627 seconds
+Preprocessor visited node count: 1539/1000000
 Post&#8208;expand include size: 35062/2097152 bytes
 Template argument size: 9806/2097152 bytes
 Highest expansion depth: 7/100
@@ -784,19 +782,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.671      1 -total
- 25.47%    9.594      1 Template:Sketcher_Tools_navi/cs
- 12.84%    4.837      2 Template:Navigation_menu_2
- 11.49%    4.328      1 Template:Userdocnavi/cs
-  9.32%    3.512     35 Template:Version
-  9.31%    3.509      1 Template:PropertyView
-  8.60%    3.241      2 Template:Docnav
-  5.99%    2.258      6 Template:Caption
-  5.37%    2.022      8 Template:VersionPlus
-  4.44%    1.674      1 Template:Variable
+100.00%   44.648      1 -total
+ 21.78%    9.726      1 Template:Sketcher_Tools_navi/cs
+ 15.91%    7.102      1 Template:Userdocnavi/cs
+ 15.79%    7.048      2 Template:Navigation_menu_2
+ 10.81%    4.826      1 Template:PropertyView
+  6.66%    2.973      2 Template:Docnav
+  6.40%    2.858      5 Template:MenuCommand
+  6.37%    2.843     35 Template:Version
+  5.87%    2.620      6 Template:Caption
+  5.29%    2.363      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118112625 and revision id 1740277. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118112714 and revision id 1740279. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
